# hackathon_automation

./: CMakeLists.txt  README.md  package.xml  setup.py
hackathon_automation/: colour_detection.py  controller.py  path_planner.py
launch/: robo.launch.py
worlds/: MAP.world
